--- a/d3/nightingale-chart/package.json
+++ b/d3/nightingale-chart/package.json
@@ -42,7 +42,6 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@storybook/addon-actions": "^6.1.11",
-    "@storybook/react": "^6.1.11",
-    "babel-loader": "^8.2.2"
+    "@storybook/react": "^6.1.11"
   }
 }
