--- a/relay/relay-step-by-step/package.json
+++ b/relay/relay-step-by-step/package.json
@@ -6,16 +6,25 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "babel-plugin-relay": "^11.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-relay": "^11.0.2",
     "react-scripts": "4.0.3",
+    "relay-runtime": "^11.0.2",
+    "typescript": "^4.3.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "yarn run relay && react-scripts start",
+    "build": "yarn run relay && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "relay": "yarn run relay-compiler --schema schema.graphql --src ./src/ --language typescript --watchman false $@"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +43,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-relay": "^11.0.1",
+    "graphql": "^15.5.0",
+    "relay-compiler": "^11.0.2",
+    "relay-compiler-language-typescript": "^14.0.0"
   }
 }
